refactored how common forum information is obtained and accessed. this still needs some work but it's getting better.

--- a/apps/ForumComposite/Views/Category/All.cshtml
+++ b/apps/ForumComposite/Views/Category/All.cshtml
@@ -1,11 +1,11 @@
 ﻿@model ForumComposite.ViewModels.Category.AllCategoriesViewModel
 @{
-	ViewBag.Title = ForumName + " - Categories";
+	ViewBag.Title = CurrentForum.ForumName + " - Categories";
 	Layout = "~/Views/Shared/_ForumLayout.cshtml";
 	ViewBag.CategoriesClass = "active";
 }
 <ul class="breadcrumb">
-	<li><a href="@Url.RouteUrl("Home")">@ForumName Home</a> <span class="divider">/</span></li>
+	<li><a href="@Url.RouteUrl("Home")">@CurrentForum.ForumName Home</a> <span class="divider">/</span></li>
 	<li class="active">Categories</li>
 </ul>
 <h1>Categories</h1>
