--- a/apps/ForumComposite/Views/PostListing/Controversial.cshtml
+++ b/apps/ForumComposite/Views/PostListing/Controversial.cshtml
@@ -1,6 +1,6 @@
 ﻿@model ForumComposite.ViewModels.PostListing.ControversialPostsViewModel
 @{
-	ViewBag.Title = ForumName + " - Controversial Posts";
+	ViewBag.Title = CurrentForum.ForumName + " - Controversial Posts";
 	Layout = "~/Views/Shared/_ForumLayout.cshtml";
 }
 <ul class="tabs">
