--- a/apps/ForumComposite/Views/Account/Register.cshtml
+++ b/apps/ForumComposite/Views/Account/Register.cshtml
@@ -3,7 +3,7 @@
 <div class="modal hide fade" style="display: none;" id="registration-modal">
 	@using (Html.BeginFormForInputModel(Model, true, Url.RouteUrl("Home")))
 	{
-	 @Html.Hidden("ForumIdentifier", ForumIdentifier)
+	 @Html.Hidden("ForumIdentifier", CurrentForum.ForumIdentifier)
 
 		<div class="modal-header">
 			<a href="#" class="close">&times;</a>
