--- a/apps/ForumComposite/Views/Shared/Layout/SideBar/Badge.cshtml
+++ b/apps/ForumComposite/Views/Shared/Layout/SideBar/Badge.cshtml
@@ -7,7 +7,7 @@
 			<a href="@Url.RouteUrl("ProfileOverview", new { profileSlug = "my-profile-slug" })"><img src="https://secure.gravatar.com/avatar/4ff80c3ba10af1c3a5d86f293003cc99?s=50"/></a> 
 		</div>
 		<div class="span2 badge-labels">
-			<h3 class="badge-username"><a href="@Url.RouteUrl("ProfileOverview", new { profileSlug = CurrentUserName.Slugify() })">@CurrentUserName</a></h3>
+			<h3 class="badge-username"><a href="@Url.RouteUrl("ProfileOverview", new { profileSlug = CurrentForum.CurrentUserName.Slugify() })">@CurrentForum.CurrentUserName</a></h3>
 			<p class="badge-points">25 points</p>
 		</div>
 	</div>
