--- a/apps/ForumComposite/Views/Shared/Layout/SideBar/NewPost.cshtml
+++ b/apps/ForumComposite/Views/Shared/Layout/SideBar/NewPost.cshtml
@@ -22,8 +22,8 @@
 		<div class="modal-body">
 		
 			
-		 @Html.Hidden("ForumIdentifier", ForumIdentifier)
-		 @Html.Hidden("AuthorIdentifier", CurrentUserIdentifier)
+		 @Html.Hidden("ForumIdentifier", CurrentForum.ForumIdentifier)
+		 @Html.Hidden("AuthorIdentifier", CurrentForum.CurrentUserIdentifier)
 
 			<div class="clearfix">
 				<label for="username">
@@ -46,7 +46,7 @@
 				<label for="email">
 					Category</label>
 				<div class="input">
-					@Html.DropDownList("CategoryIdentifier", new SelectList(Categories, "Identifier", "Name"))
+					@Html.DropDownList("CategoryIdentifier", new SelectList(CurrentForum.Categories, "Identifier", "Name"))
 					
 				</div>
 			</div>			
