--- a/apps/ForumComposite/Views/Pages/Info.cshtml
+++ b/apps/ForumComposite/Views/Pages/Info.cshtml
@@ -1,6 +1,6 @@
 ﻿@model ForumComposite.ViewModels.Pages.InfoPageViewModel
 @{
-	ViewBag.Title = CurrentForum.ForumName + " Info";
+	ViewBag.Title = ForumInfo.ForumName + " Info";
 	Layout = "~/Views/Shared/_ForumLayout.cshtml";
 	ViewBag.InfoClass = "active";
 }
