--- a/apps/ForumComposite/Views/PostListing/All.cshtml
+++ b/apps/ForumComposite/Views/PostListing/All.cshtml
@@ -1,6 +1,6 @@
 ﻿@model ForumComposite.ViewModels.PostListing.AllPostsViewModel
 @{
-	ViewBag.Title = CurrentForum.ForumName + " - All Posts";
+	ViewBag.Title = ForumInfo.ForumName + " - All Posts";
 	Layout = "~/Views/Shared/_ForumLayout.cshtml";
 }
 <ul class="tabs">
