--- a/apps/ForumComposite/Views/PostListing/Popular.cshtml
+++ b/apps/ForumComposite/Views/PostListing/Popular.cshtml
@@ -1,6 +1,6 @@
 ﻿@model ForumComposite.ViewModels.PostListing.PopularPostsViewModel
 @{
-	ViewBag.Title = CurrentForum.ForumName + " Home";
+	ViewBag.Title = ForumInfo.ForumName + " Home";
 	Layout = "~/Views/Shared/_ForumLayout.cshtml";
 }
 
