--- a/apps/ForumComposite/Views/Shared/Layout/SideBar/Categories.cshtml
+++ b/apps/ForumComposite/Views/Shared/Layout/SideBar/Categories.cshtml
@@ -1,6 +1,6 @@
 ﻿<h3>Categories</h3>
 <ul>
-	@foreach (var category in CurrentForum.Categories)
+	@foreach (var category in ForumInfo.Categories)
 	{
 		<li><a href="@Url.RouteUrl("Category", new { categorySlug = category.Slug })">@category.Name</a> (@category.TotalPosts)</li>
 	}
