--- a/apps/ForumComposite/Views/Shared/_ForumLayout.cshtml
+++ b/apps/ForumComposite/Views/Shared/_ForumLayout.cshtml
@@ -18,7 +18,7 @@
 			<div class="content">
 				@RenderBody()
 				<footer>
-					<p>&copy; @CurrentForum.OrganizationName @DateTime.Now.Year</p>
+					<p>&copy; @ForumInfo.OrganizationName @DateTime.Now.Year</p>
 				</footer>
 			</div>
 
