--- a/apps/ForumComposite/Views/Profile/All.cshtml
+++ b/apps/ForumComposite/Views/Profile/All.cshtml
@@ -1,10 +1,10 @@
 ﻿@model ForumComposite.ViewModels.Profile.AllProfilesViewModel
 @{
-	ViewBag.Title = CurrentForum.ForumName + " - All Users";
+	ViewBag.Title = ForumInfo.ForumName + " - All Users";
 	Layout = "~/Views/Shared/_ForumLayout.cshtml";
 }
 <ul class="breadcrumb">
-	<li><a href="@Url.RouteUrl("Home")">@CurrentForum.ForumName Home</a> <span class="divider">/</span></li>
+	<li><a href="@Url.RouteUrl("Home")">@ForumInfo.ForumName Home</a> <span class="divider">/</span></li>
 	<li class="active">All Users</li>
 </ul>
 <h1>All Users</h1>
