--- a/apps/ForumComposite/Views/Shared/Layout/SideBar/TopUsers.cshtml
+++ b/apps/ForumComposite/Views/Shared/Layout/SideBar/TopUsers.cshtml
@@ -1,7 +1,7 @@
 ﻿@using Euclid.Common.Extensions
 <h3>Top Users</h3>
 
-@foreach (var user in CurrentForum.TopUsers)
+@foreach (var user in ForumInfo.TopUsers)
 {
 	<div class="row">
 	<div class="span1" style="margin-top: 4px;">
