--- a/src/sdk/JsonCompositeInspector/Views/Composite/view-agent.cshtml
+++ b/src/sdk/JsonCompositeInspector/Views/Composite/view-agent.cshtml
@@ -19,7 +19,7 @@
 <div class="row show-grid">
 
 	<div class="span5 columns">
-		<h5>commands</h5>
+		<h5>Commands</h5>
 		<ul>
 		@foreach (var c in model.Commands)
 		{
@@ -31,7 +31,15 @@
 	</div>
 
 	<div class="span6 columns">
-		Html.DisplayFor(x => x.Queries, "IAgentPart", model.Queries)
+		<h5>Queries</h5>
+		<ul>
+		@foreach (var q in model.Queries)
+		{
+			<li id="@model.AgentSystemName-queries">
+				<a href="/composite/queries/@q.Name">@string.Format("{0}", q.Name)</a>
+			</li>
+		}
+		</ul>
 	</div>
 
 	<div class="span5 columns">
