--- a/src/sdk/JsonCompositeInspector/Views/Shared/_Layout.cshtml
+++ b/src/sdk/JsonCompositeInspector/Views/Shared/_Layout.cshtml
@@ -3,7 +3,9 @@
 <html>
 	<head>
 		<meta charset="utf-8" />
-		<title>Composite Inspector</title>
+		<title>
+			Composite Inspector
+		</title>
 		<script type="text/javascript" src="/composite/js/jquery-1.7.1.min.js"></script>
 		<script type="text/javascript" src="/composite/js/euclid.js" ></script>
 		<link rel="Stylesheet" type="text/css" href="/composite/css/composite-inspector.css" />
