tighten up javascript for retrieving query metadata

--- a/src/sdk/JsonCompositeInspector/Views/Shared/_Layout.cshtml
+++ b/src/sdk/JsonCompositeInspector/Views/Shared/_Layout.cshtml
@@ -7,7 +7,7 @@
 			Composite Inspector
 		</title>
 		<script type="text/javascript" src="/composite/js/jquery-1.7.1.min.js"></script>
-		<script type="text/javascript" src="/composite/js/euclid.js" ></script>
+		<script type="text/javascript" src="/composite/js/euclid-0.9.js" ></script>
 		<link rel="Stylesheet" type="text/css" href="/composite/css/composite-inspector.css" />
 		<link rel="stylesheet" href="http://twitter.github.com/bootstrap/assets/css/bootstrap-1.1.0.min.css" />
 	</head>
