--- a/src/sdk/JsonCompositeInspector/Views/Queries/view-query-methods.cshtml
+++ b/src/sdk/JsonCompositeInspector/Views/Queries/view-query-methods.cshtml
@@ -9,18 +9,37 @@
 
 <script type="text/javascript">
 	$(document).ready(function () {
+		var queryMetadata = null;
 		try {
-			var model = EUCLID.getQueryMethods({ queryName: "@model" });
-			$("#form-container").append(form);
+			queryMetadata = EUCLID.getQueryMetadata({ queryName: "@model" });
+			if (queryMetadata == null || queryMetadata === undefined) {
+				$("#list-container").html("<p class='alert-message warning'>The query @model contains no query methods</p>");
+			} else {
+				var list = $("<ul></ul>");
+				$.each(queryMetadata.Methods, function (index, method) {
+					list.append($("<li><a data-index='" + index + "' class='execute' href='#'>" + method.Name + "</a></li>"));
+				});
+
+				$("#list-container").append(list);
+			}
 		} catch (e) {
-			$("#form-container").html("<p class='alert-message error'><strong>" + e.name + "</strong><br/><br/><span>" + e.message + "</span></p>");
+			$("#list-container").html("<p class='alert-message error'><strong>" + e.name + "</strong><br/><br/><span>" + e.message + "</span></p>");
 		}
+
+		$(".execute").click(function () {
+			var idx = $(this).attr("data-index");
+			var method = queryMetadata.Methods[idx];
+			alert("there are " + method.Arguments.length + " arguments to the method '@model." + method.Name + "'");
+
+			return false;
+		});
 	});
 </script>
 <div class="row show-grid">
-
+	
 	<div class="span5 columns">
-		<div id="form-container" ></div>
+		<h5 id="query-name">@model</h5>
+		<div id="list-container" ></div>
 	</div>
 
 </div>
