--- a/apps/ForumComposite/Views/Shared/Layout/Styles.cshtml
+++ b/apps/ForumComposite/Views/Shared/Layout/Styles.cshtml
@@ -1,6 +1,6 @@
 ﻿<!--[if lt IE 9]>
 	<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"> </script>
 <![endif]-->
-<link rel="stylesheet" href="@Url.Content("~/Content/styles/bootstrap.css")">
-<link rel="stylesheet" href="@Url.Content("~/Content/styles/jqcloud.css")">
-<link rel="stylesheet" href="@Url.Content("~/Content/styles/custom.css")">
+<link rel="stylesheet" href="@Url.Content("~/Content/themes/" + ForumInfo.ForumTheme + "/styles/bootstrap.css")">
+<link rel="stylesheet" href="@Url.Content("~/Content/themes/" + ForumInfo.ForumTheme + "/styles/jqcloud.css")">
+<link rel="stylesheet" href="@Url.Content("~/Content/themes/" + ForumInfo.ForumTheme + "/styles/custom.css")">
