--- a/apps/ForumComposite/Views/Shared/Layout/Scripts.cshtml
+++ b/apps/ForumComposite/Views/Shared/Layout/Scripts.cshtml
@@ -1,5 +1,5 @@
 ﻿<script src="http://code.jquery.com/jquery-1.5.2.min.js"> </script>
-<script src="@Url.Content("~/Content/scripts/bootstrap-alerts.js")"> </script>
-<script src="@Url.Content("~/Content/scripts/bootstrap-buttons.js")"> </script>
-<script src="@Url.Content("~/Content/scripts/bootstrap-modal.js")"> </script>
-<script src="@Url.Content("~/Content/scripts/jqcloud-0.2.8.js")"> </script>
+<script src="@Url.Content("~/Content/themes/" + ForumInfo.ForumTheme + "/scripts/bootstrap-alerts.js")"> </script>
+<script src="@Url.Content("~/Content/themes/" + ForumInfo.ForumTheme + "/scripts/bootstrap-buttons.js")"> </script>
+<script src="@Url.Content("~/Content/themes/" + ForumInfo.ForumTheme + "/scripts/bootstrap-modal.js")"> </script>
+<script src="@Url.Content("~/Content/themes/" + ForumInfo.ForumTheme + "/scripts/jqcloud-0.2.8.js")"> </script>
