implemented custom content on forum UI

--- a/apps/AdminComposite/Views/Content/_NewContent.cshtml
+++ b/apps/AdminComposite/Views/Content/_NewContent.cshtml
@@ -50,10 +50,12 @@
 					@Html.DropDownListFor(m=>m.Location, new List<SelectListItem>
 											{
 												new SelectListItem {Selected = true, Text = " -- Content Location --", Value = string.Empty},											
-												new SelectListItem {Selected = false, Text = "Home - Header"},
-												new SelectListItem {Selected = false, Text = "Home - Content"},
-												new SelectListItem {Selected = false, Text = "UserProfile - Header"},
-												new SelectListItem {Selected = false, Text = "Category - Content"},
+												new SelectListItem {Selected = false, Text = "Home - Dismissable Header", Value = "home-dismissableheader"},
+												new SelectListItem {Selected = false, Text = "Home - Permanent Header", Value = "home-permanentheader"},
+												new SelectListItem {Selected = false, Text = "Category Listing - Header", Value = "categorylisting-header"},
+												new SelectListItem {Selected = false, Text = "Individual Category - Header", Value = "individualcategory-header"},
+												new SelectListItem {Selected = false, Text = "Tag Listing - Header", Value = "taglisting-header"},
+												new SelectListItem {Selected = false, Text = "Individual Tag - Header", Value = "individualtag-header"},												
 											}, new {id = "content-location"})
 				</dd>
 
@@ -63,7 +65,7 @@
 											{
 												new SelectListItem {Selected = true, Text = " -- Content Type --", Value = string.Empty},											
 												new SelectListItem {Selected = false, Text = "Rich Text", Value = Enum.GetName(typeof(AvailableContentType), AvailableContentType.RichText)},
-												new SelectListItem {Selected = false, Text = "Embedded Youtube", Value = Enum.GetName(typeof(AvailableContentType), AvailableContentType.EmeddedYouTube)},
+												new SelectListItem {Selected = false, Text = "Embedded Youtube", Value = Enum.GetName(typeof(AvailableContentType), AvailableContentType.EmbeddedYouTube)},
 											}, new { id = "content-type" })
 				</dd>
 
