--- a/apps/AdminComposite/Views/Content/_UpdateContent.cshtml
+++ b/apps/AdminComposite/Views/Content/_UpdateContent.cshtml
@@ -62,7 +62,7 @@
 											{
 												new SelectListItem { Text = " -- Content Type --", Value = string.Empty},											
 												new SelectListItem { Text = "Rich Text", Value = Enum.GetName(typeof(AvailableContentType), AvailableContentType.RichText)},
-												new SelectListItem { Text = "Embedded Youtube", Value = Enum.GetName(typeof(AvailableContentType), AvailableContentType.EmeddedYouTube)},
+												new SelectListItem { Text = "Embedded Youtube", Value = Enum.GetName(typeof(AvailableContentType), AvailableContentType.EmbeddedYouTube)},
 											}, new { id = "content-type" })
 				</dd>
 
