--- a/apps/ForumComposite/Views/Category/All.cshtml
+++ b/apps/ForumComposite/Views/Category/All.cshtml
@@ -9,6 +9,9 @@
 	<li class="active">Categories</li>
 </ul>
 <h1>Categories</h1>
+
+@Html.Partial("Layout/CustomContent", "categorylisting-header")
+
 <hr />
 
 @{
