--- a/apps/ForumComposite/Views/Category/Detail.cshtml
+++ b/apps/ForumComposite/Views/Category/Detail.cshtml
@@ -10,6 +10,9 @@
 	<li class="active">@Model.Name</li>
 </ul>
 <h1>@Model.Name</h1>
+
+@Html.Partial("Layout/CustomContent", "individualcategory-header")
+
 <hr />
 <p><small>(Custom category content.)</small></p>
 
