--- a/apps/ForumComposite/Views/Tag/All.cshtml
+++ b/apps/ForumComposite/Views/Tag/All.cshtml
@@ -9,6 +9,9 @@
 	<li class="active">Tags</li>
 </ul>
 <h1>Tags</h1>
+
+@Html.Partial("Layout/CustomContent", "taglisting-header")
+
 <hr />
 
 <div class="row">
