--- a/apps/ForumComposite/Views/Tag/Detail.cshtml
+++ b/apps/ForumComposite/Views/Tag/Detail.cshtml
@@ -10,6 +10,9 @@
 	<li class="active">{Tag Name}</li>
 </ul>
 <h1>{Tag Name}</h1>
+
+@Html.Partial("Layout/CustomContent", "individualtag-header")
+
 <hr />
 <p><small>(Custom tag content.)</small></p>
 
