--- a/apps/AdminComposite/Views/Content/_preview.cshtml
+++ b/apps/AdminComposite/Views/Content/_preview.cshtml
@@ -3,7 +3,7 @@
 @model ForumContent
 
 
-@if (Model.ContentType == Enum.GetName(typeof(AvailableContentType), AvailableContentType.EmeddedYouTube))
+@if (Model.ContentType == Enum.GetName(typeof(AvailableContentType), AvailableContentType.EmbeddedYouTube))
 {
 	<iframe width="420" height="315" src="http://www.youtube.com/embed/@Model.Value" frameborder="0" allowfullscreen></iframe>
 }
