--- a/apps/ForumComposite/Views/PostListing/Controversial.cshtml
+++ b/apps/ForumComposite/Views/PostListing/Controversial.cshtml
@@ -3,6 +3,11 @@
 	ViewBag.Title = ForumInfo.ForumName + " - Controversial Posts";
 	Layout = "~/Views/Shared/_ForumLayout.cshtml";
 }
+
+@Html.Partial("Layout/CustomContent", "home-dismissableheader")
+@Html.Partial("Layout/CustomContent", "home-permanentheader")
+
+
 <ul class="tabs">
 	<li><a href="@Url.RouteUrl("PopularPosts")">Popular Posts</a></li>
 	<li class="active"><a href="@Url.RouteUrl("ControversialPosts")">Controversial Posts</a></li>
@@ -16,18 +21,19 @@
 
 	var postsToPad = 0;
 	var needsPadding = false;
-	
-	if(totalPosts % 4 != 0)
+
+	if (totalPosts % 4 != 0)
 	{
 		needsPadding = true;
 		postsToPad = 4 - (totalPosts % 4);
 	}
 }
 
-@foreach(var post in Model.Listing.Posts){
+@foreach (var post in Model.Listing.Posts)
+{
 
 	if (postCount % 4 == 0)
-		{
+	{
 			@:<div class="row">
 		}
 
@@ -35,17 +41,17 @@
 				@RenderPage("~/Views/Shared/PostTile.cshtml", new { Size = "Small", Post = post })
 			</div>
 
-		if(needsPadding && postCount == (totalPosts - 1))
+	if (needsPadding && postCount == (totalPosts - 1))
+	{
+		for (var i = 0; i < postsToPad; i++)
 		{
-			for(var i = 0; i<postsToPad; i++)
-			{
 				<div class="span4"></div>
-			}
+		}
 			@:</div><hr/>
 		}
 
-		if (postCount % 4 == 3)
-		{
+	if (postCount % 4 == 3)
+	{
 			@:</div><hr/>
 		}
 
@@ -61,9 +67,10 @@
 <div class="pagination">
 	<ul>
 		<li class="prev disabled"><a href="#">&larr; Previous</a></li>
-		@for (var i = 1; i < pages + 1; i++ )
+		@for (var i = 1; i < pages + 1; i++)
 	{
-		<li @if(i == Model.CurrentPage){<text>class="active"</text>}><a href="?page=@i">@i</a></li>
+		<li @if (i == Model.CurrentPage)
+			{<text>class="active"</text>}><a href="?page=@i">@i</a></li>
 	}
 		<li class="next"><a href="#">Next &rarr;</a></li>
 	</ul>
