--- a/apps/ForumComposite/Views/PostListing/Popular.cshtml
+++ b/apps/ForumComposite/Views/PostListing/Popular.cshtml
@@ -4,19 +4,8 @@
 	Layout = "~/Views/Shared/_ForumLayout.cshtml";
 }
 
-<div class="alert-message block-message warning fade in" data-alert="alert">
-	<a class="close" href="#">×</a>
-	<p class="alert-message-text">
-		<h2>Welcome, forum user.</h2>
-		This is something a user only needs to see occasionally and can be closed. Duis
-		mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem
-		nec elit, etc.</p>
-
-	<div class="alert-actions">
-		<a class="btn large info" href="#">Go register!</a>
-	</div>
-
-</div>
+@Html.Partial("Layout/CustomContent", "home-dismissableheader")
+@Html.Partial("Layout/CustomContent", "home-permanentheader")
 
 <ul class="tabs">
 	<li class="active"><a href="@Url.RouteUrl("PopularPosts")">Popular Posts</a></li>
