--- a/apps/ForumComposite/Views/Shared/Layout/CustomContent.cshtml
+++ b/apps/ForumComposite/Views/Shared/Layout/CustomContent.cshtml
@@ -31,8 +31,11 @@
 		case "richtext":
 			@Html.Raw(content.Value)
 		break;
+		case "plaintext":
+			@content.Value
+		break;
 		case "embeddedyoutube":
 			<iframe width="560" height="315" src="http://www.youtube.com/embed/@content.Value" frameborder="0" allowfullscreen></iframe>
-		break;
+																																 break;
 	}
 }
