--- a/src/sdk/JsonCompositeInspector/Views/Shared/_Layout.cshtml
+++ b/src/sdk/JsonCompositeInspector/Views/Shared/_Layout.cshtml
@@ -8,7 +8,9 @@
 		</title>
 		<script type="text/javascript" src="/composite/js/jquery-1.7.1.min.js"></script>
 		<script type="text/javascript" src="/composite/js/euclid-0.9.js" ></script>
+		<script type="text/javascript" src="/composite/js/jquery-ui-1.8.16.custom.min.js" ></script>
 		<link rel="Stylesheet" type="text/css" href="/composite/css/composite-inspector.css" />
+		<link rel="Stylesheet" type="text/css" href="/composite/css/smoothness/jquery-ui-1.8.16.custom.css" />
 		<link rel="stylesheet" href="http://twitter.github.com/bootstrap/assets/css/bootstrap-1.1.0.min.css" />
 	</head>
 
